[project]
name = "google-maps-reviews-mcp"
version = "0.2.0"
description = "An MCP Tool utilizing Playwright to scrape Google Maps reviews."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "mcp>=1.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "playwright>=1.53.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
